log
Fri May 13 15:24:25 UTC 2022: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:51:31: error: subscripted value is neither array nor pointer nor vector
             printf("%d ", n[i][j]);
                               ^
Compilation failed
14faddf
Fri May 13 15:32:33 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
890412c
Fri May 13 15:37:57 UTC 2022: 
 sudoku.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:9: error: unused variable ‘copia’ [-Werror=unused-variable]
     int copia;
         ^~~~~
cc1: all warnings being treated as errors
Compilation failed
cfbd171
Fri May 13 15:38:02 UTC 2022: 
 sudoku.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|5
total_score: 0/70
87947c4
Fri May 13 15:38:32 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
3b06c43
Fri May 13 15:46:16 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
fbf73c4
Fri May 13 15:46:31 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
662badb
Fri May 13 15:56:02 UTC 2022: 
 sudoku.c | 10 +++++++---
 1 file changed, 7 insertions(+), 3 deletions(-)
 tests:  0|5
total_score: 0/70
c47a5b9
Fri May 13 15:56:27 UTC 2022: 
 sudoku.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|5
total_score: 0/70
0951b45
Fri May 13 15:57:50 UTC 2022: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 0/70
3aa07c4
Fri May 13 15:58:52 UTC 2022: 
 sudoku.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  3|4
total_score: 20/70
6e32855
Fri May 13 16:04:17 UTC 2022: 
 sudoku.c | 16 +++++++++++++++-
 1 file changed, 15 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
sudoku.c: In function ‘is_valid’:
sudoku.c:79:32: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
                             if(n->sudo[i + ii][j + jj] = n->sudo[i + k/9][j + k % 9]) return 0;
                                ^
cc1: all warnings being treated as errors
Compilation failed
997f0d5
